--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,16 +1,16 @@
-{
-    "version": 2,
-    "builds": [
-      {
-        "src": "Server/index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "Server/index.js"
-      }
-    ]
-  }
-  
+
+  {
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
+}
